upgrade to spring boot 3 and java 23